# pandora-wcs

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
src/pandorawcs/: __init__.py
tests/: test_pandorawcs.py
