[tool.poetry]
name = "pandora-wcs"
version = "0.1.0"
description = ""
authors = ["Pandora Data Processing Center <christina.l.hedges@nasa.gov>"]
readme = "README.md"
packages = [{include = "pandorawcs", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
matplotlib = "^3.8.1"
astropy = "^5.3.4"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.8"
pytest = "^7.4.3"
flake8 = "^6.1.0"
black = "^23.11.0"
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.0"
mkdocs-jupyter = "^0.24.6"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
